--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ background-size: cover;
     <!-- testimonial section 5 starts here -->
     <div class="project-section-5-div">
         <h2 class="section-5-h2">what our customers say</h2>
-        <p class="section-5-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+        <p class="section-5-p">Lorem, ipsum doloris sit amet consectetur adipisicing elit. Eligendi,
              autem iusto ducimus officiis vel qui tenetur voluptatibus fuga odit temporibus,
              sapiente sed est nulla illo necessitatibus obcaecati labore soluta minima?</p>
              <div class="section-5-div-img">
